--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/TheYassAnz/myirc/issues"
   },
-  "homepage": "https://github.com/TheYassAnz/myirc#readme"
+  "homepage": "https://github.com/TheYassAnz/myirc#readme",
+  "dependencies": {
+    "nodejs": "^0.0.0"
+  }
 }
