feat(express): create a server express with all routes

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/TheYassAnz/myirc#readme",
   "dependencies": {
+    "express": "^4.19.2",
     "nodejs": "^0.0.0"
   }
 }
