--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/TheYassAnz/myirc#readme",
   "dependencies": {
     "express": "^4.19.2",
-    "nodejs": "^0.0.0"
+    "nodejs": "^0.0.0",
+    "socket.io": "^4.7.5"
   }
 }
