--- a/package.json
+++ b/package.json
@@ -17,8 +17,21 @@
   },
   "homepage": "https://github.com/TheYassAnz/myirc#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.3",
     "nodejs": "^0.0.0",
+    "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.6",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   }
 }
