--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-http-proxy": "^2.0.0",
@@ -27,12 +28,13 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.3",
     "nodejs": "^0.0.0",
-    "nodemon": "^3.1.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   }
