--- a/package.json
+++ b/package.json
@@ -20,19 +20,26 @@
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.19.2",
+    "express-flash": "^0.0.2",
+    "express-handlebars": "^7.1.2",
+    "express-hbs": "^2.5.0",
     "express-http-proxy": "^2.0.0",
+    "hbs": "^4.2.0",
     "http-proxy": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.3",
     "nodejs": "^0.0.0",
-    "nodemon": "^3.1.0",
+    "open": "^10.1.0",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.6",
+    "nodemon": "^3.1.0",
+    "ts-node": "^10.9.2",
     "tsx": "^4.7.1",
     "typescript": "^5.4.3"
   }
